[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongodb_elasticsearch_healthcheck_lm"
version = "0.0.2"
authors = [{ name="Léo Merkel", email="cdf.leo.merkel@gmail.com"}]
description = "a mongodb and elasticsearch django-healthcheck"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["django-health-check"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]

[project.urls]
Homepage = "https://git.unistra.fr/community/pount/pount-api"
